# datamap-rs

./: .gitignore  Cargo.toml  README.md  README2.md  add_id.yaml  filter_pl.yaml  foo.json  partition_config.yaml  percentile.yaml  py_only_anneals.txt  s2pdf_datadelve.yaml  sortfilter.yaml  test_count_stats.yaml  test_subsample_data.json  weighted_partition_config.yaml
configs/: code_challenge_repos.yaml  python_only.yaml  s2c_fim_test_config.yaml
configs/all_dressed/: all_dressed_config.yaml  all_dressed_config_anno.yaml  all_dressed_config_anno_V2.yaml  alldressed5_qc.yaml  download_lid.sh  download_tokenizer.sh  download_ultrafineweb.sh  download_weborganizer_topic.sh  fuzzy_suffarr.yaml  minhash_groupfilter_config.yaml  mixing_classifiers.yaml  tokenize_language.sh
configs/code/: add_id.yaml  cls_html.yaml  cls_jupyter_notebook.yaml  commitpack_objc.yaml  download_classifiers.sh  filter_commitpack.sh  filter_jupyter_notebook.yaml  filter_languages.sh  filter_languages2.sh  filter_languages_gzip.sh  filter_sponge_code_prose.sh  generate_classifier2_configs.sh  generate_classifier_configs.sh  generate_commitpack_classifier_configs.sh  generate_commitpack_filter_configs.sh  generate_filter_configs.sh  generate_filter_configs2.sh  generate_filter_configs_gzip.sh  generate_filter_configs_sponge_code_prose.sh  minhash_dedup_language.sh  python_classifiers.yaml  rerun_stack_edu_redux_percentiles.sh  reshard_commitpack.sh  reshard_decon.sh  tag_commitpack.sh  tag_languages.sh  tag_languages2.sh  tag_sample.sh  tag_sponge_code_prose.sh  tokenize_commitpack.sh  tokenize_language.sh  tokenize_language2.sh  tokenize_languages_gzip.sh  tokenize_sponge_code_prose.sh
configs/dclm/: dclm_config.yaml
configs/pdfs/: generate_classifiers_config.sh  groupfilter.yaml  olmocrawledpdfs_cleanup.yaml  olmocrawledpdfs_lentest.yaml  olmocrawledpdfs_spam.yaml  olmocrawledpdfs_weborganizer.yaml  percentiles.txt  s2orc_fos_partition.yaml  split_ultrafineweb_on_finepdfs.sh  tag_pdfs.sh  tag_pdfs_jake.sh  tokenize_ultrafineweb_on_finepdfs.sh  ultrafineweb_on_finepdfs.sh  ultrafineweb_on_finepdfs.yaml
docs/: count.md  group.md  map.md  partition.md  reservoir_sample.md  reshard.md  shuffle.md
examples/all_dressed/: ad_groupsort_config.yaml  config.yaml  config_v3.yaml  config_v3_remote.yaml  crawl_dates.json  ft_anno_asset_downloader.txt  ft_annotator.yaml  madlad_annotator.yaml  madlad_config.yaml  minhash_groupsort.yaml  pool_fxn.sh  pool_setup.sh  s5cmd_asset_downloader.txt  text_hash_groupsort.yaml  upsample_splitter.yaml
examples/allow_deny_list_example/: allowed_languages.txt  blocked_categories.txt
python/: assign_dedupe_priority.py  browse_minhash_groups.py  count_tokens.py  dl_hf.py  dl_hf_model.py  filter_tokens.py  find_priority0.py  linearize_notebook.py  make_multipart_downloaders.py  map_verifiers.py  percentile.py  repartition_by_priority.py  reshard_all.sh  s3_npy_size.py  s5cmd.py  s5cmd_download_maker.py  url_dedupe_pdfs.py
src/: dclm_mappers.rs  group_map_fxn.rs  groupfilter.rs  groupsort.rs  lib.rs  main.rs  map_fxn.rs  map_fxn2.rs  merge.rs  minhash.rs  partition.rs  percentile_finder.rs  pl_style.rs  pyscore.rs  reservoir.rs  reservoir_sample.rs  reshard.rs  shuffle.rs  sort.rs  table_new.rs  upsample_tools.rs  utils.rs
tests/: main.rs
(+2335 files in other folders)
