[package]
name = "datamap-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
datamap-rs = { path = "." }


[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.96"
clap = {version ="4.5.31", features= ["derive"]}
dashmap = {version = "6.1.0", features = ["rayon"]}
indicatif = "0.17.11"
mj_io = "0.1.3"
once_cell = "1.21.1"
phf = {version = "0.11.3", features = ["macros"]}
rand = "0.9.0"
rayon = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.139"
serde_yaml = "0.9.34"
url = "2.5.4"
uuid = { version = "1.4", features = ["v4"] }
zstd = "0.12"
fasttext = "0.7"
unicode-segmentation = "1.12.0"
regex = "1.11.1"
derivative = "2.2.0"
fxhash = "0.2.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

tree-sitter = "0.20"
syn = "2.0"
swc_ecma_parser = "0.143"
swc_common = "0.33"



# For SQL parsing
sqlparser = "0.39"

# For markdown
pulldown-cmark = "0.9"
# Language-specific tree-sitter crates

tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-python = "0.23.6"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.23.11"
tree-sitter-bash = "0.25.0"
tree-sitter-swift = "=0.7.1"


[[test]]
name = "tests"
path = "tests/main.rs"
