[package]
name = "datamap-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
datamap-rs = { path = "." }


[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.96"
clap = {version ="4.5.31", features= ["derive"]}
dashmap = {version = "6.1.0", features = ["rayon"]}
indicatif = "0.17.11"
mj_io = "0.1.5"
once_cell = "1.21.1"
phf = {version = "0.11.3", features = ["macros"]}
rand = "0.9.0"
rayon = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.139"
serde_yaml = "0.9.34"
url = "2.5.4"
uuid = { version = "1.4", features = ["v4"] }
fasttext = "0.7"
unicode-segmentation = "1.12.0"
regex = "1.11.1"
derivative = "2.2.0"
fxhash = "0.2.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = "0.13.3"
tiktoken = "1.0.1"
tiktoken-rs = "0.7.0"
binary-heap-plus = "0.5.0"
ahash = "0.8.12"
sonic-rs = "0.5.5"
fastrand = "2.3.0"
simd-json = "0.15.1"
gjson = "0.8.1"
flate2 = "1.1.5"
tokenizers = "0.20"
unicode-normalization = "0.1"
unicode-general-category = "0.6"



[[test]]
name = "tests"
path = "tests/main.rs"
